--- a/src/product/Sidebar.module.scss
+++ b/src/product/Sidebar.module.scss
@@ -3,3 +3,17 @@
     margin-bottom: var(--static-space-24);
   }
 }
+
+.panel {
+	transform: scale(0.2);
+	opacity: 0;
+  visibility: hidden;
+	transform-origin: top left;
+	transition: var(--transition-macro-medium);
+
+	&.open {
+		transform: scale(1);
+		visibility: visible;
+		opacity: 1;
+	}
+}
