--- a/src/once-ui/styles/global.scss
+++ b/src/once-ui/styles/global.scss
@@ -50,7 +50,6 @@ blockquote {
     backdrop-filter: blur(var(--static-space-2));
     border: 1px dashed var(--brand-alpha-medium);
     max-width: var(--responsive-width-xs);
-    padding: var(--static-space-12) var(--static-space-24) var(--static-space-8) var(--static-space-24);
     width: 100%;
 
     span {
@@ -58,6 +57,7 @@ blockquote {
         padding: var(--static-space-16) var(--static-space-24);
         color: var(--brand-on-background-medium) !important;
         font-family: var(--font-family-code) !important;
+        font-size: var(--font-size-body-s) !important;
     }
 }
 
